<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/item_margin_small"
    app:contentPadding="0dp"
    app:cardCornerRadius="@dimen/item_corner_radius"
    android:elevation="@dimen/item_elevation"
    >

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="@dimen/item_width"
    android:layout_height="@dimen/item_height"
    android:layout_gravity="center"
    >

    <ImageView
        android:id="@+id/image_seller_item"
        android:layout_width="@dimen/item_image_width"
        android:layout_height="@dimen/item_image_height"
        android:layout_marginTop="4dp"
        android:layout_marginHorizontal="3dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_launcher_background"
        tools:src="@tools:sample/avatars"
        android:contentDescription="@string/seller_item_image"
        />

    <ImageView
        android:id="@+id/image_fav_seller_item"
        android:layout_width="@dimen/item_image_fav_dimen"
        android:layout_height="@dimen/item_image_fav_dimen"
        android:layout_marginTop="@dimen/item_fav_marginTop"
        android:layout_marginEnd="@dimen/item_fav_marginEnd"
        app:layout_constraintTop_toTopOf="@+id/image_seller_item"
        app:layout_constraintEnd_toEndOf="@+id/image_seller_item"
        android:src="@drawable/ellipse_empty"
        android:contentDescription="@string/descr_favorite_seller_image" />

    <ImageView
        android:id="@+id/icon_seller_item"
        android:layout_width="@dimen/item_image_icon_dimen"
        android:layout_height="@dimen/item_image_icon_dimen"
        android:src="@drawable/ic_heart"
        app:layout_constraintTop_toTopOf="@+id/image_fav_seller_item"
        app:layout_constraintStart_toStartOf="@+id/image_fav_seller_item"
        app:layout_constraintEnd_toEndOf="@+id/image_fav_seller_item"
        app:layout_constraintBottom_toBottomOf="@+id/image_fav_seller_item"
        android:contentDescription="@string/descr_favorite_seller_mark"
        />

    <TextView
        android:id="@+id/text_current_price_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/image_seller_item"
        app:layout_constraintTop_toBottomOf="@id/image_seller_item"
        android:layout_marginStart="@dimen/item_text_price_marginStart"
        android:layout_marginTop="@dimen/item_text_price_marginTop"
        style="@style/TextAppearance.Swagger.SellerTextPrice"
        tools:text="$300"
        />

    <TextView
        android:id="@+id/text_old_price_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/text_current_price_item"
        app:layout_constraintBaseline_toBaselineOf="@id/text_current_price_item"
        android:layout_marginStart="@dimen/item_margin_small"
        style="@style/TextAppearance.Swagger.SellerTextPriceOld"
        tools:text="$400"
        />

    <TextView
        android:id="@+id/text_name_item"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_current_price_item"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="@dimen/item_text_name_marginTop"
        android:layout_marginHorizontal="@dimen/item_text_name_marginHorizontal"
        android:layout_marginBottom="@dimen/item_text_name_marginBottom"
        style="@style/TextAppearance.Swagger.SellerTextName"
        tools:text="Samsung Note 20 Ultra"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>

